# aiventura

./: .gitignore  README.md  pyproject.toml  tell_story.py
src/: schemas.py  story.py  story_generator.py  text_generator.py  utils.py
src/prompts/: prompt_continue.txt  prompt_end.txt  prompt_start.txt  prompt_title.txt
