[tool.poetry]
name = "aiventura"
version = "0.1.0"
description = ""
authors = ["Didac Fortuny <dacfortuny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.13.2"
jupyterlab = "^4.2.3"
omegaconf = "^2.3.0"
langchain = "^0.2.14"
langchain-mistralai = "^0.1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
